--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,12 +10,12 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Depends:
-    R (>= 4.0.0)
+    R (>= 4.0.2)
 Imports: 
     raster,
+    stats,
     vegan,
     pracma,
     Rfast,
-    RSpectra,
-    stats
+    RSpectra
 RoxygenNote: 7.1.1
